# ChangeLog for media-sound/mangler
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Jan 2010; Ben de Groot <yngwin@gentoo.org> mangler-9999.ebuild:
  Specify autoconf-2.65 as a workaround

  29 Jan 2010; Ben de Groot <yngwin@gentoo.org> mangler-9999.ebuild:
  Add eautoreconf to prevent issues with maintainer mode

  29 Jan 2010; Ben de Groot <yngwin@gentoo.org> mangler-9999.ebuild:
  Add librsvg dep.

  17 Jan 2010; Ben de Groot <yngwin@gentoo.org> mangler-9999.ebuild:
  Add useflags for alsa and pulseaudio, now that there is alsa support.

*mangler-9999 (22 Nov 2009)

  22 Nov 2009; Ben de Groot <yngwin@gentoo.org> +mangler-9999.ebuild,
  +metadata.xml:
  Initial import, ebuild based on the one by Naib in
  https://forums.gentoo.org/viewtopic-t-802965-highlight-.html
