@@ -1,3 +1,3 @@
-EBUILD mangler-9999.ebuild 771 RMD160 0af5dd1c8d39dda8df436a507f685c091cd83968 SHA1 782283398a77b7e064e64982d5990b553d1c2f11 SHA256 d5ade9b152faf51afd5c18fe122c7ebe74f005b42d18cb25694710f08fca513e
-MISC ChangeLog 821 RMD160 ce4ae3b42f6cd4c20c0d8536c38a710f9ffeaad6 SHA1 0b918cf0bae9f21bae887c1fd5e479b464668e3d SHA256 0d753d9abc7972a98feebbd88fb112a6aef38d279f7ea5fa75f31d160aaca7af
+EBUILD mangler-9999.ebuild 1059 RMD160 b9f4630d7e7a38bfd403e96304b3f23ded90c530 SHA1 094c7eb9ecf7c72d48ebe8b25485ac4aefd7f79a SHA256 6936e54253fc2c6350a8429d6b5e22aced39da9af5a2ef6f7a34faf502b26139
+MISC ChangeLog 979 RMD160 f86cfb11b73b9ec05b8a1176980fc689b3da96bb SHA1 7851c023f616563dbab439a796774b5931c63244 SHA256 c7c8b89adfa104f10e8ef242bb0f6407d11fc025873a5a80c3e5a4e4d00ac0eb
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
