@@ -12,14 +12,18 @@ HOMEPAGE="http://www.mangler.org/"
 LICENSE="GPL-3"
 SLOT="0"
 KEYWORDS=""
-IUSE="alsa pulseaudio"
+IUSE="alsa celt gsm mpd nowplaying pulseaudio speex xosd"
 
 RDEPEND="dev-cpp/gtkmm:2.4
 	gnome-base/librsvg
-	media-libs/speex
-	media-sound/gsm
+	speex? ( media-libs/speex )
+	gsm? ( media-sound/gsm )
+	celt? ( >=media-libs/celt-0.7.1 )
 	alsa? ( media-libs/alsa-lib )
-	pulseaudio? ( media-sound/pulseaudio )"
+	pulseaudio? ( media-sound/pulseaudio )
+	mpd? ( media-libs/libmpdclient )
+	nowplaying? ( >=dev-libs/dbus-glib-0.80 )
+	xosd? ( x11-libs/xosd )"
 DEPEND="${RDEPEND}
 	dev-util/pkgconfig
 	>=sys-devel/autoconf-2.65"
@@ -29,7 +33,12 @@ src_prepare() {
 }
 
 src_configure() {
-	econf $(use_with alsa) $(use_with pulseaudio)
+	econf $(use_with alsa) \
+		$(use_with pulseaudio) \
+		$(use_enable celt) \
+		$(use_enable gsm) \
+		$(use_enable speex) \
+		$(use_enable xosd)
 }
 
 src_install() {
